<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_edit_personal_info"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="cs.b07.cscb07courseproject.EditPersonalInfo"
    android:background="@drawable/backg_home">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorSageGreen" />
    <TextView android:id="@+id/how_to"
        android:layout_below="@id/toolbar"
        android:textSize="15sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/how_to_edit"/>
    <ScrollView
        android:layout_below="@id/how_to"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPaleGreen">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:text="@string/first_name"
                android:onClick="editFirstName" />
            <TextView android:id="@+id/curr_first_name"
                android:layout_marginTop="-50dp"
                android:layout_gravity="end"
                android:layout_width="wrap_content"
                android:layout_height="50dp" />
            <EditText android:id="@+id/new_first_name"
                android:inputType="text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/get_first_name"
                android:maxLines="1"
                android:visibility="gone"/>


            <Button
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:text="@string/last_name"
                android:onClick="editLastName" />
            <TextView android:id="@+id/curr_last_name"
                android:layout_marginTop="-50dp"
                android:layout_gravity="end"
                android:layout_width="wrap_content"
                android:layout_height="50dp" />
            <EditText android:id="@+id/new_last_name"
                android:inputType="text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/get_last_name"
                android:maxLines="1"
                android:visibility="gone"/>


            <Button
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:text="@string/address"
                android:onClick="editAddress" />
            <TextView android:id="@+id/curr_address"
                android:layout_marginTop="-50dp"
                android:layout_gravity="end"
                android:layout_width="wrap_content"
                android:layout_height="50dp" />
            <EditText android:id="@+id/new_address"
                android:inputType="text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/get_address"
                android:maxLines="1"
                android:visibility="gone"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:text="@string/credit_card_number"
                android:onClick="editCreditCardNumber"/>
            <TextView android:id="@+id/curr_cred_num"
                android:layout_marginTop="-50dp"
                android:layout_gravity="end"
                android:layout_width="wrap_content"
                android:layout_height="50dp"/>
            <EditText android:id="@+id/new_cred_num"
                android:inputType="text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/get_credit_card_number"
                android:maxLines="1"
                android:visibility="gone"/>


            <Button
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:text="@string/expiry_date"
                android:onClick="editExpiryDate"/>
            <TextView android:id="@+id/curr_expiry_date"
                android:layout_marginTop="-50dp"
                android:layout_gravity="end"
                android:layout_width="wrap_content"
                android:layout_height="50dp"/>
            <DatePicker
                android:id="@+id/new_expiry_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:datePickerMode="spinner"
                android:calendarViewShown="false"
                android:visibility="gone"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:text="@string/password"
                android:onClick="editPassword"/>
            <EditText android:id="@+id/new_password"
                android:inputType="text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:hint="@string/new_password"
                android:visibility="gone"/>
            <EditText android:id="@+id/confirm_password"
                android:inputType="text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:hint="@string/rePassword"
                android:visibility="gone"/>

            <Button
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enter"
                android:onClick="setPersonalInfo"/>
        </LinearLayout>

    </ScrollView>
</RelativeLayout>
