<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_client_login_page"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="cs.b07.cscb07courseproject.ClientLoginPage"
    android:background="@drawable/backg_home">
    <TextView
        android:layout_centerHorizontal="true"
        android:layout_marginTop="150dp"
        android:gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="5mm"
        android:text="@string/login"
        />
    <EditText android:id="@+id/email_address"
        android:inputType="textEmailAddress"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="200dp"
        android:gravity="center_horizontal"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/email_address"/>
    <EditText android:id="@+id/password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="250dp"
        android:gravity="center_horizontal"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/password"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="300dp"
        android:text="@string/enter"
        android:onClick="clientLogin"/>
</RelativeLayout>
