<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:background="@drawable/backg_home">
    <Button
        android:layout_marginTop="100dp"
        android:layout_centerHorizontal="true"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/admin_login"
        android:onClick="adminLogIn"/>
    <Button
        android:layout_marginTop="200dp"
        android:layout_centerHorizontal="true"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/client_login"
        android:onClick="clientLogInPage"/>
    <Button
        android:layout_marginTop="300dp"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:onClick="signupPage"/>
    <TextView android:id="@+id/temp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        />
</RelativeLayout>