<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_sign_up_page"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="cs.b07.cscb07courseproject.SignUpPage"
    android:background="@drawable/backg_home">

    <EditText android:id="@+id/email_address"
        android:gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:hint="@string/email_address"
        android:layout_alignBottom="@+id/password"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="51dp"/>

    <EditText android:id="@+id/password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="250dp"
        android:gravity="center_horizontal"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:maxLines="1"
        android:hint="@string/password"/>
    <!-- Comment out this part for future use
    <EditText android:id="@+id/rePassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="300dp"
        android:gravity="center_horizontal"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/rePassword"/>
        -->
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="350dp"
        android:text="@string/enter"
        android:onClick="createUser"/>

</RelativeLayout>
